--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<h1>Ничья Динамо с Брюгге, Шахтер переиграл Маккаби. Главные новости за 18 февраля</h1>
 <body>
-    <img scr="img/1611906876-8619.jpg">
-    <h1>На Житомирщині через снігопади обмежили рух авто</h1>
-    <p>В Україні через снігопади рух для великогабаритного транспорту обмежено на дорогах у 7 областях: Київській, Житомирській, Рівненській, Полтавській, Черкаській, Чернігівській та Волинській.</p>
-    <p>"У Житомирській області замітало й напередодні - зараз там насипало вище коліна", - йдеться в повідомленні.</p>
-    <p>Відучора на кордоні Житомирської та Київської областей почав працювати пункт обігріву.</p>
-    <a href="https://www.unian.ua/economics/transport/na-zhitomirshchini-cherez-snigopadi-obmezhili-ruh-avto-novini-zhitomira-11315096.html">Источник</a>
+    <img src="28a653.jpeg" alt="" srcset="">
+    <h2>Динамо не смогло переиграть Брюгге</h2>
+    <p>В первом матче 1/16 плей-офф Лиги Европы киевское “Динамо” сыграло вничью с “Брюгге”. В Киеве было холодно, шел снег, и это влияло на качество игры. Матч прошел практически без моментов, но команды все же обменялись голами. Все они были забиты во втором тайме. Сначала Виталий Буяльский поразил ворота Миньоле красивым ударом, а через пять минут “Динамо” пропустило после углового. Бущан ошибся на выходе, Беседин не доиграл с Мехеле и центрбек “Брюгге” отправил мяч в ворота – 1:1.</p>
+    <h2>Шахтер забил два гола Маккаби Тель-Авив</h2>
+    <p>“Шахтер”, в отличие от “Динамо”, смог выиграть в первой игре плей-офф. Команда Луиша Каштру переиграла на выезде “Маккаби” Тель-Авив. “Горняки” забили по голу в каждом из таймов. Сначала Марлос, Матвиенко и Алан Патрик разыграли красивую комбинацию, которая закончилась голом бразильца, а в самом конце игры Фернандо и Тете организовали контратаку – 2:0.</p>
+    <h2>Тоттенхэм и Юнайтед забили по четыре гола, провал Наполи</h2>
+    <p>АПЛ – единственный чемпионат, представленный в 1/16 Лиги Европы четырьмя клубами, и никто из них вчера не проиграл. “Арсенал” и “Лестер” сыграли вничью с “Бенфикой” и “Славией”, а “Манчестер Юнайтед” и “Тоттенхэм” забили “Реал Сосьедаду” и “Вольфсбергу” по четыре мяча (4:0 и 4:1). Неожиданность дня – поражение “Наполи” испанской “Гранаде” (2:0). Паулу Фонсека во главе “Ромы” с таким же счетом обыграл свой бывший клуб “Брагу”.</p>
+    <a href="https://www.ua-football.com/ukrainian/news/1613687683-nichya-dinamo-s-bryugge-shahter-pereigral-makkabi-glavnye-novosti-za-18-fevralya.html">Источник</a>
+    
 </body>
 </html>
