--- a/Tasks.html
+++ b/Tasks.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href = "https://valeriia-kozlova21.github.io/frontend-ek/news/index.html">News</a>
-    <a href = "https://valeriia-kozlova21.github.io/frontend-ek/resume/cv.html">CV</a>
+    <a href = "https://valeriia-kozlova21.github.io/frontend-ek/news/index.html">News</a><br>
+    <a href = "https://valeriia-kozlova21.github.io/frontend-ek/resume/cv.html">CV</a><br>
     <a href = "https://valeriia-kozlova21.github.io/frontend-ek/teachers/teachers.html">Teachers</a>
 </body>
 </html>
